objects/Auditor_Location__c.object
<CustomObject>
    <fields>
        <fullName>Auditor_Location_Status_In_Text__c</fullName>
        <inlineHelpText>Auditor Location Status picklist is converted to text by workflow</inlineHelpText>
        <label>Auditor Location Status (In Text)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Location_Status__c</fullName>
        <inlineHelpText>Auditor status as evaluated by Root Store Managers</inlineHelpText>
        <label>Auditor Location Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Qualifications__c</fullName>
        <inlineHelpText>URL to third-party website attesting to the qualifications of this Auditor to issue WebTrust, ETSI EN 319 411, or ETSI TS 102 042 audit statements.</inlineHelpText>
        <label>Auditor Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <label>Auditor</label>
        <referenceTo>Auditor__c</referenceTo>
        <relationshipLabel>Auditor Locations</relationshipLabel>
        <relationshipName>Auditor_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Public comments</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Auditor Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Auditor_Location_Status__c</columns>
        <columns>Auditor_Qualifications__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Auditor Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auditor Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Auditor_Qualifications</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( 
OR(LEN (Auditor_Qualifications__c) = 0, 
REGEX(Auditor_Qualifications__c, &quot;^[hH][tT][tT][pP][0-9A-Za-z+&amp;@#/%?=~\\-_|!:,.;\\[\\]()]*$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Auditor_Qualifications__c</errorDisplayField>
        <errorMessage>Auditor Qualifications URL must begin with &apos;http&apos; and can only contain letters, numbers and following characters: + &amp; @ # / % ? = ~ -_ | ! : , . ; [ ] ( )</errorMessage>
    </validationRules>
</CustomObject>